// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adapter processes app event as event and span 1`] = `Array []`;

exports[`Adapter processes app event as event and span 2`] = `Array []`;

exports[`Adapter processes app event as event and span 3`] = `
Array [
  Event {
    "attributes": Object {
      "appRoleInstance": "{role instance value}",
      "appRoleName": "Web",
      "billedSize": 742,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "itemCount": 1,
      "myCustomProperty1": "This is my custom property",
      "myCustomProperty2": "And here is another.",
      "name": "my custom event",
      "now": "2021-05-04T19:12:36.185Z",
      "operationId": "98765",
      "parentId": "12345",
      "resourceGuid": "{guid of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription Id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
    },
    "eventType": "AzureAppEvent",
    "timestamp": 1620155556185,
  },
]
`;

exports[`Adapter processes app event as event and span 4`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance value}",
      "appRoleName": "Web",
      "billedSize": 742,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "itemCount": 1,
      "name": "my custom event",
      "parent.id": "12345",
      "properties.myCustomProperty1": "This is my custom property",
      "properties.myCustomProperty2": "And here is another.",
      "properties.now": "2021-05-04T19:12:36.185Z",
      "resourceGuid": "{guid of resource}",
      "resourceId": "/SUBSCRIPTIONS/{subscription Id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "type": "AppEvent",
    },
    "id": undefined,
    "timestamp": 1620155556185,
    "trace.id": "98765",
  },
]
`;

exports[`Adapter processes app request and dependency as spans 1`] = `Array []`;

exports[`Adapter processes app request and dependency as spans 2`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "duration.ms": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "itemCount": 1,
      "name": "{function name}",
      "performanceBucket": "<250ms",
      "properties.category": "Host.Results",
      "properties.fullName": "Functions.{function name}",
      "properties.functionExecutionTimeMs": "4.7239",
      "properties.hostInstanceId": "hostInstanceIdValue",
      "properties.http.method": "GET",
      "properties.http.path": "/api/{function name goes here}",
      "properties.invocationId": "invocationIdValue",
      "properties.logLevel": "Information",
      "properties.processId": "8912",
      "properties.triggerReason": "This function was programmatically called via the host APIs.",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "service.name": "{function name}",
      "success": true,
      "type": "AppRequest",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
]
`;

exports[`Adapter processes app request and dependency as spans 3`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "duration.ms": 9.1593,
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "itemCount": 1,
      "name": "{function name}",
      "performanceBucket": "<250ms",
      "properties.category": "Host.Results",
      "properties.fullName": "Functions.{function name}",
      "properties.functionExecutionTimeMs": "4.7239",
      "properties.hostInstanceId": "hostInstanceIdValue",
      "properties.http.method": "GET",
      "properties.http.path": "/api/{function name goes here}",
      "properties.invocationId": "invocationIdValue",
      "properties.logLevel": "Information",
      "properties.processId": "8912",
      "properties.triggerReason": "This function was programmatically called via the host APIs.",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "service.name": "{function name}",
      "success": true,
      "type": "AppRequest",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "duration.ms": 231,
      "http.target": "{target property of client.trackDependency}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "parent.id": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "type": "AppDependency",
    },
    "id": "{id value}",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
]
`;

exports[`Adapter processes app request and dependency when sent as array of strings 1`] = `Array []`;

exports[`Adapter processes app request and dependency when sent as array of strings 2`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "node buffer",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "Buffer",
      "type": "AppDependency",
    },
    "id": "recordId",
    "timestamp": 1620674371908,
    "trace.id": "parentId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "select customers proc",
      "parent.id": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "http://dbname",
      "type": "AppDependency",
    },
    "id": "id",
    "timestamp": 1620674372049,
    "trace.id": "opId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "duration.ms": 30021.5457,
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "itemCount": 1,
      "name": "functionName",
      "parent.id": "parentId",
      "performanceBucket": "30sec-1min",
      "properties.category": "Host.Results",
      "properties.fullName": "Functions.functionName",
      "properties.functionExecutionTimeMs": "30020.222",
      "properties.hostInstanceId": "hostInstance",
      "properties.http.method": "GET",
      "properties.http.path": "/api/functionName",
      "properties.invocationId": "invocationId",
      "properties.logLevel": "Information",
      "properties.processId": "6904",
      "properties.triggerReason": "This function was programmatically called via the host APIs.",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "service.name": "functionName",
      "success": true,
      "type": "AppRequest",
    },
    "id": "bc40802d79559544",
    "timestamp": 1620674361060,
    "trace.id": "operationId",
  },
]
`;

exports[`Adapter processes app request and dependency when sent as array of strings 3`] = `
Array [
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "Buffer",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "node buffer",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "Buffer",
      "type": "AppDependency",
    },
    "id": "recordId",
    "timestamp": 1620674371908,
    "trace.id": "parentId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "dw0-hr0-1068-25",
      "appRoleName": "Web",
      "billedSize": 834,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "data": "SELECT * FROM Customers",
      "dependencyType": "ZSQL",
      "duration.ms": 231,
      "itemCount": 1,
      "name": "select customers proc",
      "parent.id": "parentId",
      "performanceBucket": "<250ms",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "target": "http://dbname",
      "type": "AppDependency",
    },
    "id": "id",
    "timestamp": 1620674372049,
    "trace.id": "opId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "roleInstanceId",
      "appRoleName": "functionAppName",
      "billedSize": 1087,
      "clientCity": "Pittsburgh",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Pennsylvania",
      "clientType": "PC",
      "duration.ms": 30021.5457,
      "http.statusCode": "200",
      "http.url": "https://functionAppName.azurewebsites.net/api/functionName",
      "itemCount": 1,
      "name": "functionName",
      "parent.id": "parentId",
      "performanceBucket": "30sec-1min",
      "properties.category": "Host.Results",
      "properties.fullName": "Functions.functionName",
      "properties.functionExecutionTimeMs": "30020.222",
      "properties.hostInstanceId": "hostInstance",
      "properties.http.method": "GET",
      "properties.http.path": "/api/functionName",
      "properties.invocationId": "invocationId",
      "properties.logLevel": "Information",
      "properties.processId": "6904",
      "properties.triggerReason": "This function was programmatically called via the host APIs.",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionId/RESOURCEGROUPS/resourceGroupName/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/functionAppName",
      "sdkVersion": "azurefunctions: 3.0.15584.0",
      "service.name": "functionName",
      "success": true,
      "type": "AppRequest",
    },
    "id": "bc40802d79559544",
    "timestamp": 1620674361060,
    "trace.id": "operationId",
  },
  Span {
    "attributes": Object {
      "appRoleInstance": "{role instance id}",
      "appRoleName": "Web",
      "billedSize": 786,
      "clientCity": "San Jose",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientOs": "Windows_NT 10.0.14393",
      "clientStateOrProvince": "California",
      "clientType": "PC",
      "dependencyType": "http",
      "duration.ms": 231,
      "http.target": "{target property of client.trackDependency}",
      "itemCount": 1,
      "name": "External/{name property of client.trackDependency}",
      "parent.id": "12345",
      "performanceBucket": "<250ms",
      "resourceGuid": "{resource uuid4}",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdkVersion": "node:1.8.10",
      "success": true,
      "type": "AppDependency",
    },
    "id": "{id value}",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
]
`;

exports[`Adapter processes app request as event 1`] = `Array []`;

exports[`Adapter processes app request as event 2`] = `
Array [
  Event {
    "attributes": Object {
      "appRoleInstance": "very long id string",
      "appRoleName": "functionAppName goes here",
      "billedSize": 1082,
      "category": "Host.Results",
      "clientCity": "Portland",
      "clientCountryOrRegion": "United States",
      "clientIp": "0.0.0.0",
      "clientStateOrProvince": "Oregon",
      "clientType": "PC",
      "durationMs": 9.1593,
      "fullName": "Functions.{function name}",
      "functionExecutionTimeMs": "4.7239",
      "hostInstanceId": "hostInstanceIdValue",
      "http.method": "GET",
      "http.path": "/api/{function name goes here}",
      "http.statusCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "id": "09d760d34d75e847",
      "invocationId": "invocationIdValue",
      "itemCount": 1,
      "logLevel": "Information",
      "name": "{function name}",
      "operationId": "12345",
      "operationName": "{function name}",
      "parentId": "12345",
      "performanceBucket": "<250ms",
      "processId": "8912",
      "resourceGuid": "resourceGuid",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdkVersion": "azurefunctions: 3.0.15571.0",
      "success": true,
      "triggerReason": "This function was programmatically called via the host APIs.",
    },
    "eventType": "AzureAppRequest",
    "timestamp": 1619736074123,
  },
]
`;
